# omoikane

./: .gitignore  LICENSE  README.md  pyproject.toml
src/models/: __init__.py
src/models/base/: __init__.py  aaa.py  acl.py  as_path.py  bgp.py  community_list.py  device.py  fex.py  interface.py  ntp.py  ospf.py  prefix_list.py  route.py  route_map.py  router_config.py  vlan.py  vrf.py
src/models/base/core/: __init__.py  device.py
src/models/base/interfaces/: __init__.py  fex.py  interface.py  vlan.py
src/models/base/policy/: __init__.py  acl.py  as_path.py  community_list.py  prefix_list.py  route_map.py
src/models/base/routing_protocols/: __init__.py  bgp.py  ospf.py  route.py  vrf.py
src/models/base/system/: __init__.py  logging.py  ntp.py  snmp.py
src/models/cisco_parser/: README.md  __init__.py  ios.py  nexus.py  router.py
src/omoikane/: __init__.py  errors.py
tests/models/base/: test_acl.py  test_device.py  test_route_map.py
tests/models/cisco_parser/: test_ios.py  test_nexus.py  test_route_parsing.py  test_router.py  test_routing.py
tests/models/cisco_parser/examples/: ROUTER-DC01.txt  ROUTER-DC02.txt  ROUTER-DC03.txt  ROUTER-DC04.txt  SwitchA Routing Table.txt  SwitchA.txt  SwitchB Routing Table.txt  SwitchB.txt  SwitchC Routing Table.txt  SwitchC.txt  SwitchD Routing Table.txt  SwitchD.txt
