[project]
name = "omoikane"
version = "0.1.0"
description = "Network configuration parser and analyzer"
authors = [
    { name = "Wassim", email = "wassim@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "ciscoconfparse2>=0.7.74",
    "networkx>=3.4",
    "numpy>=2.2.0",
    "plotly>=5.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/models"]

[tool.ruff]
# Line length configuration
line-length = 120

# General configurations
src = ["src"]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
# Enable rules
select = ["E", "F", "I"]  # E and F are enabled by default, I enables import sorting
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["models"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
